// This file is a modified copy of the rollapp module proto contract. Source:
// https://github.com/dymensionxyz/dymension/blob/f140cd1dd561cefb3e6562cbf4379b88cd16400d/proto/dymensionxyz/dymension/rollapp/.

syntax = "proto3";
package dymensionxyz.dymension.rollapp;

option go_package = "github.com/dymensionxyz/dymint/types/pb/dymensionxyz/dymension/rollapp";

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";


// BlockDescriptor defines a single rollapp chain block description.
message BlockDescriptor {
  // height is the height of the block
  uint64 height = 1; 
  // stateRoot is a 32 byte array of the hash of the block (state root of the block)
  bytes stateRoot = 2; 
  // timestamp is the time from the block header
  google.protobuf.Timestamp timestamp = 3 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
  // DrsVersion is a DRS version used by the rollapp.
  string drs_version = 4;
}

// BlockDescriptors defines list of BlockDescriptor.
message BlockDescriptors {
  repeated BlockDescriptor BD = 1 [(gogoproto.nullable) = false];
}